# spmspm_pim

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  cycles.txt  ddr4.toml  detailed_samebank.txt  detailed_samesabarray.txt  dispathing_total_result.txt  find_reason.txt  gearbox_result_list.toml  hbm.toml  justfile  local_dispatcher_total_result.txt  local_total_result.txt  nnz_native.json  remote_total_result.txt  result.txt  run.sh
.cargo/: config.toml
benches/: divbench.rs
channel_stats/: graph_2cubes_sphere_batch_128_topk_0.00001_input.txt  graph_2cubes_sphere_batch_128_topk_0.00001_output.txt  graph_2cubes_sphere_batch_128_topk_0.00005_input.txt  graph_2cubes_sphere_batch_128_topk_0.00005_output.txt  graph_2cubes_sphere_batch_128_topk_0.0001_input.txt  graph_2cubes_sphere_batch_128_topk_0.0001_output.txt  graph_2cubes_sphere_batch_128_topk_0.0005_input.txt  graph_2cubes_sphere_batch_128_topk_0.0005_output.txt  graph_2cubes_sphere_batch_128_topk_0.001_input.txt  graph_2cubes_sphere_batch_128_topk_0.001_output.txt  graph_2cubes_sphere_batch_16_topk_0.00001_input.txt  graph_2cubes_sphere_batch_16_topk_0.00001_output.txt  graph_2cubes_sphere_batch_16_topk_0.00005_input.txt  graph_2cubes_sphere_batch_16_topk_0.00005_output.txt  graph_2cubes_sphere_batch_16_topk_0.0001_input.txt  graph_2cubes_sphere_batch_16_topk_0.0001_output.txt  graph_2cubes_sphere_batch_16_topk_0.0005_input.txt  graph_2cubes_sphere_batch_16_topk_0.0005_output.txt  graph_2cubes_sphere_batch_16_topk_0.001_input.txt  graph_2cubes_sphere_batch_16_topk_0.001_output.txt  graph_2cubes_sphere_batch_1_topk_0.00001_input.txt  graph_2cubes_sphere_batch_1_topk_0.00001_output.txt  graph_2cubes_sphere_batch_1_topk_0.00005_input.txt  graph_2cubes_sphere_batch_1_topk_0.00005_output.txt  graph_2cubes_sphere_batch_1_topk_0.0001_input.txt  graph_2cubes_sphere_batch_1_topk_0.0001_output.txt  graph_2cubes_sphere_batch_1_topk_0.0005_input.txt  graph_2cubes_sphere_batch_1_topk_0.0005_output.txt  graph_2cubes_sphere_batch_1_topk_0.001_input.txt  graph_2cubes_sphere_batch_1_topk_0.001_output.txt  graph_2cubes_sphere_batch_2_topk_0.00001_input.txt  graph_2cubes_sphere_batch_2_topk_0.00001_output.txt  graph_2cubes_sphere_batch_2_topk_0.00005_input.txt  graph_2cubes_sphere_batch_2_topk_0.00005_output.txt  graph_2cubes_sphere_batch_2_topk_0.0001_input.txt  graph_2cubes_sphere_batch_2_topk_0.0001_output.txt  graph_2cubes_sphere_batch_2_topk_0.0005_input.txt  graph_2cubes_sphere_batch_2_topk_0.0005_output.txt  graph_2cubes_sphere_batch_2_topk_0.001_input.txt  graph_2cubes_sphere_batch_2_topk_0.001_output.txt  (+1128 more)
completion_scripts/: readme.md
configs/: ddr4-3200.toml  ddr4.toml  gearbox.toml  gearbox_0001.toml  gearbox_0005.toml  gearbox_001.toml  gearbox_001_test.toml  gearbox_001_test_v2.toml  gearbox_001_v2.toml  gearbox_001_v2_all.toml  gearbox_001_v2_same_bank.toml  gearbox_001_v2_same_bank_weightd.toml  gearbox_005.toml  gearbox_g.toml  gearbox_g_001.toml  gearbox_splitmm.toml  gearbox_test.toml  real_jump.toml  real_jump_same_bank-1-16-debug.toml  real_jump_same_bank-1-16.toml  real_jump_test.toml  (+7 more)
(+205 files in other folders)
