[package]
authors = ["Jiangqiu Shen"]
description = "A simple PIM"
edition = "2021"
license = "MIT"
name = "spmspm_pim"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.15", features = ["derive", "color"]}
clap_complete = "4.0.2"
enum-as-inner = "0.5.1"
eyre = "0.6.8"
hashbrown = "0.13.1"
humantime = "2.1.0"
itertools = "0.10.5"
rayon = "1.6.1"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
sprs = {path = "../sprs/sprs"}
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
[profile.release]
lto = true
opt-level = 3

[lib]
# crate-type = ["cdylib", "rlib","staticlib"]
