[package]
authors = ["Jiangqiu Shen"]
description = "A simple PIM"
edition = "2021"
license = "MIT"
name = "spmspm_pim"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.15", features = ["derive", "color"]}
enum-as-inner = "0.5.1"
eyre = "0.6.8"
hashbrown = "0.13.1"
humantime = "2.1.0"
itertools = "0.10.5"
once_cell = "1.17.0"
parse-size = "1.0.0"
plotters = "0.3.4"
plotters-text = {git = "https://github.com/shenjiangqiu/plotters-text"}
rayon = "1.6.1"
regex = "1.7.1"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
sprs = {path = "../sprs/sprs"}
sysinfo = "0.27.6"
terminal_size = "0.2.3"
toml = "0.7.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
[profile.release]
lto = false
opt-level = 3

[lib]
# crate-type = ["cdylib", "rlib","staticlib"]

[build-dependencies]
clap = {version = "4.0.15", features = ["derive", "color"]}
clap_complete = "4.1.1"
