[package]
authors = ["Jiangqiu Shen"]
description = "A simple PIM"
edition = "2021"
license = "MIT"
name = "spmspm_pim"
version = "0.1.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.2", features = ["derive", "color"]}
debug-ignore = "1.0.5"
enum-as-inner = "0.5.1"
eyre = "0.6.8"
hashbrown = "0.13.2"
humantime = "2.1.0"
image = "0.24.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
once_cell = "1.17.1"
parse-size = "1.0.0"
plotters = "0.3.4"
rayon = "1.7.0"
regex = "1.7.1"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sprs = {path = "../sprs/sprs"}
statrs = "0.16.0"
sysinfo = "0.28.4"
toml = "0.7.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
walkdir = "2.3.3"
[profile.release]
# lto = true
debug = 1
opt-level = 3
[lib]
# crate-type = ["cdylib", "rlib","staticlib"]

[build-dependencies]
clap = {version = "4.2.1", features = ["derive", "color"]}
clap_complete = "4.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
harness = false
name = "divbench"
